--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 </DOCTYPE html>
-  <hl>
+  </div>
     ＢạＮ ＴＵＹếＮ Ｄú ＬéＰ ＱＵá
-  <hl>
+  </div>
     ＢạＮ ＴＵＹếＮ Ｄú ＬéＰ ＱＵá
-  <hl>
+  </div>
+    ＢạＮ ＴＵＹếＮ Ｄú ＬéＰ ＱＵá
+  </div>
+    ＢạＮ ＴＵＹếＮ Ｄú ＬéＰ ＱＵá
+  </div>
