--- a/index.html
+++ b/index.html
@@ -8,3 +8,12 @@
   </div>
     ＢạＮ ＴＵＹếＮ Ｄú ＬéＰ ＱＵá
   </div>
+    ＢạＮ ＴＵＹếＮ Ｄú ＬéＰ ＱＵá
+  </div>
+    Mong Bạn Tuyến Không dập mình
+    <video width="1200" height="600" controls>
+       <source src="movie.mp4" type="video/mp4">
+       <source src="movie.ogg" type="video/ogg">
+       Your browser does not support the video tag.
+    </video>
+  </div>
